--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-			<meta charset="utf-8">
+
+<!doctype html>
+	<html lang="en">
+		<head>
+			<meta charset="utf-8" />
 			<title></title>
-			<link rel="stylesheet" href="index_files/style.css">
+			<link rel="stylesheet" href="style.css" />
 			<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<![endif]-->
 		</head>
-		<body style="-moz-user-select: text;">
+		<body>
             <div class="container">
-                <img class="logo" src="index_files/logo.png">
+                <img class="logo" src="logo.png" />
                 <div class="addresses">
                     <div class="address">
-                        <p><a href="https://goo.gl/maps/itPwg1tJYzj" target="_blank">101 Second Street, Suite 2225
-                        <br>San Francisco, CA 94105</a></p>
-                        <p>+1 415-659-8050</p>
+                        <p><a href="https://goo.gl/maps/rFPUkadzW3n" target="_blank">97 Avenue de la République,
+                        <br />Paris, 75011</a></p>
+                        <p>+33 6 62 69 62 78</p>
                     </div>
 		    <div class="address">
                         <p><a href="https://goo.gl/maps/nAT65WsBcfx" target="_blank">920 Broadway, 14th Floor
-                        <br>New York, NY 10010</a></p>
+                        <br />New York, NY 10010</a></p>
                         <p>+1 212-313-5201</p>
                     </div>
                     <div class="address">
                         <p><a href="https://goo.gl/maps/n5srgQjGQUM2" target="_blank">5 Golden Square, 4th Floor
-                        <br>London, W1F 9BS</a></p>
+                        <br />London, W1F 9BS</a></p>
                         <p>+44-20-3667-1300</p>
                     </div>
                 </div>
@@ -36,6 +37,5 @@
             <div class="footer">
                 COPYRIGHT © 2015 CODE ADVISORS LLC. ALL RIGHTS RESERVED. <a href="http://www.codeadvisors.com/CODELegalNotice.pdf">LEGAL NOTICES</a>
             </div>
-		
-	
-</body></html>
+		</body>
+	</html>
