--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="addresses">
                     <div class="address">
                         <p><a href="https://goo.gl/maps/rFPUkadzW3n" target="_blank">97 Avenue de la République,
-                        <br />Paris, 75011</a></p>
+                        <br />75011 Paris</a></p>
                         <p>+33 6 62 69 62 78</p>
                     </div>
 		    <div class="address">
