--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <p><a href="mailto:info@codeadvisors.com" target="_blank">Contact Us</a></p>
-                    <p><a href="http://twitter.com/codeadvisors" target="_blank">@CODEADVISORS</a></p>
+                    <p><a href="mailto:contact@deolis.com" target="_blank">Contact Us</a></p>
                 </div>
             </div>
             <div class="footer">
