--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="contact">
-                    <p><a href="mailto:contact@deolis.com" target="_blank">Contact Us</a></p>
+                    <p><a href="mailto:info@deolis.com" target="_blank">Contact Us</a></p>
                 </div>
             </div>
             <div class="footer">
