--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                         <p>+33 662-696-278</p>
                     </div>
 		    <div class="address">
-                        <p><a href="https://goo.gl/maps/nAT65WsBcfx" target="_blank">920 Broadway, 14th Floor
-                        <br />New York, NY 10010</a></p>
-                        <p>+1 212-313-5201</p>
+                        <p><a href="https://goo.gl/maps/BvwWr7uYrFS2">555 Montgomery St
+                        <br />San Francisco, CA 94111</a></p>
+                        <p>+1 212-313-5170</p>
                     </div>
                     <div class="address">
-                        <p><a href="https://goo.gl/maps/n5srgQjGQUM2" target="_blank">5 Golden Square, 4th Floor
-                        <br />London, W1F 9BS</a></p>
-                        <p>+44-20-3667-1300</p>
+                        <p><a href="https://goo.gl/maps/fm88Gr9kuFF2" target="_blank">11 Lexington St, 2th Floor
+                        <br />London, W1F 9AF</a></p>
+                        <p>+44-20-3667-1340</p>
                     </div>
                 </div>
                 <div class="contact">
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="footer">
-                COPYRIGHT © 2015 CODE ADVISORS LLC. ALL RIGHTS RESERVED. <a href="http://www.codeadvisors.com/CODELegalNotice.pdf">LEGAL NOTICES</a>
+                COPYRIGHT © 2017 DEOLIS. ALL RIGHTS RESERVED. <a href="http://www.deolis.com/DEOLISLegalNotice.pdf">LEGAL NOTICES</a>
             </div>
 		</body>
 	</html>
