--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img class="logo" src="logo.png" />
                 <div class="addresses">
                     <div class="address">
-                        <p><a href="https://goo.gl/maps/rFPUkadzW3n" target="_blank">97 Avenue de la République,
+                        <p><a href="https://goo.gl/maps/rFPUkadzW3n" target="_blank">97 Avenue de la République
                         <br />75011 Paris</a></p>
                         <p>+33 662-696-278</p>
                     </div>
