--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<p>+1 212-313-5170</p>
                     </div>
 		    <div class="address">
-			<p><a href="https://goo.gl/maps/rFPUkadzW3n" target="_blank">97 Avenue de la République
+			<p><a href="https://goo.gl/maps/AgHHm5s1w2L2" target="_blank">97 Avenue de la République
                         <br />75011 Paris</a></p>
 			<p>+33 662-696-278</p>
                     </div>
