--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<body>
             <div class="container">
                 <img class="logo" src="logo.png" />
+
+                <div class="underTitle">We help ambitious startups to find and negotiate <br> the best deal with the right international investors</div>
+
                 <div class="addresses">
                     <div class="address">
                         <p><a href="https://goo.gl/maps/BvwWr7uYrFS2">555 Montgomery St
