--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <div class="addresses">
                     <div class="address">
-                        <p><a href="https://goo.gl/maps/BvwWr7uYrFS2">555 Montgomery St
+                        <p><a href="https://goo.gl/maps/7iA5AuyRkK22">555 Montgomery St
 			<br />San Francisco, CA 94111</a></p>
 			<p>+1 212-313-5170</p>
                     </div>
