--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <img class="logo" src="logo.png" />
 
-                <div class="underTitle">We help ambitious startups to find and negotiate <br> the best deal with the right international investors</div>
+                <div class="underTitle">Smart money for ambitious startups</div>
 
                 <div class="addresses">
                     <div class="address">
