--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <img class="logo" src="logo.png" />
 
-                <div class="underTitle">Smart advices for ambitious startups</div>
+                <div class="underTitle">Smart advice for ambitious startups</div>
 
                 <div class="addresses">
                     <div class="address">
