--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<p>+33 662-696-278</p>
                     </div>
                     <div class="address">
-                        <p><a href="https://goo.gl/maps/fm88Gr9kuFF2" target="_blank">11 Lexington St, 2th Floor
+                        <p><a href="https://goo.gl/maps/fm88Gr9kuFF2" target="_blank">11 Lexington St
                         <br />London, W1F 9AF</a></p>
                         <p>+44-754-072-5664</p>
                     </div>
